--- a/styles/modal.css
+++ b/styles/modal.css
@@ -22,6 +22,7 @@
     padding: 1rem;
     background-color: #fefefe;
     border: 1px solid #888;
+    border-radius: 0.5rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 
     -webkit-animation-name: animateTop;
